[project]
name = "NumEst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "ipywidgets>=8.1.8",
    "joblib>=1.5.3",
    "kaleido>=1.2.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pymc>=5.26.1",
    "pytensor>=2.35.1",
    "seaborn>=0.13.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
